[gd_scene load_steps=10 format=2]

[ext_resource path="res://Target.gd" type="Script" id=1]
[ext_resource path="res://Assets/Target.png" type="Texture" id=2]
[ext_resource path="res://Audio/Hit.wav" type="AudioStream" id=3]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 1.0

[sub_resource type="OccluderPolygon2D" id=7]
polygon = PoolVector2Array( 45.0952, -46.6227, 50.1125, -40.351, 55.13, -33.661, 59.3112, -25.2986, 62.6561, -17.7725, 63.4924, -9.82823, 64.3286, -0.211472, 63.0743, 9.40529, 60.5656, 22.367, 58.475, 29.475, 52.2032, 39.0918, 45.5133, 46.1998, 37.1509, 52.0535, 27.9523, 57.489, 14.5724, 63.3427, 3.2832, 65.0152, -8.42419, 64.5971, -8.42419, 64.5971, -19.7134, 62.0883, -19.7134, 62.0883, -34.3476, 55.8166, -44.3824, 47.4542, -52.7449, 37.4193, -59.0167, 25.7119, -63.616, 15.259, -65.2885, 4.80595, -65.2885, -6.90138, -63.1978, -16.1, -59.8529, -26.1349, -56.0898, -34.9154, -48.5637, -43.2778, -41.0375, -49.9677, -32.6751, -55.8214, -23.4764, -60.4207, -12.1873, -63.3475, -1.73425, -64.6019, 11.6456, -63.3475, 23.3529, -60.8388, 33.3878, -56.2395, 39.6596, -51.2221 )

[sub_resource type="CircleShape2D" id=3]
radius = 64.9637

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 1
emission_sphere_radius = 64.0
flag_disable_z = true
initial_velocity = 40.0
angular_velocity = 28.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 1.0
damping = 22.0
angle = 45.0
angle_random = 1.0
scale = 2.0
color_ramp = SubResource( 5 )

[node name="Target" type="RigidBody2D" groups=[
"Targets",
]]
position = Vector2( 571.578, 149.473 )
mode = 2
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
contacts_reported = 3
contact_monitor = true
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Sprite"]
occluder = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Spark" type="Particles2D" parent="."]
emitting = false
amount = 80
one_shot = true
preprocess = 0.25
speed_scale = 1.5
explosiveness = 1.0
process_material = SubResource( 6 )

[node name="Tween" type="Tween" parent="."]

[node name="Freeze" type="Timer" parent="."]
pause_mode = 2
wait_time = 0.08

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_Circle_body_entered"]
[connection signal="timeout" from="Freeze" to="." method="_on_Freeze_timeout"]
